a1/brendan_gordon/TEST_PROGRAMS/invalidtype/mathieu_boucher/invalidtype5.min
#float in while

var x : float;

while x do

done

